# vector-brain

./: .env.example  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  main.py  ollama-entrypoint.sh  pyproject.toml
alembic/: env.py
app/api/: rag.py  vector.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: vector.py
app/schemas/: vector.py
app/services/: embedding_service.py  file_processor.py  text_preprocessing.py
streamlit_chat/: app.py
vector_brain/: main.py
vector_brain/api/v1/endpoints/: rag.py
vector_brain/core/: deps.py  vector_store.py
vector_brain/db/: session.py
vector_brain/models/: embeddings.py
vector_brain/services/: document_indexer.py  langchain_pipeline.py  rag_api_retriever.py  rag_pipeline.py
vector_brain_backend/: main.py
vector_brain_backend/api/v1/endpoints/: rag.py
vector_brain_backend/core/: config.py  deps.py  vector_store.py
vector_brain_backend/db/: session.py
vector_brain_backend/models/: embeddings.py
vector_brain_backend/schemas/: rag.py
vector_brain_backend/services/: document_indexer.py  langchain_pipeline.py  rag_api_retriever.py  rag_pipeline.py  text_extractor.py
vector_brain_frontend/: app.py
