[project]
name = "vector-brain"
version = "0.1.0"
description = ""
authors = [
    {name = "Suender Oliveira"}
]
license = {text = "APACHE 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ollama (>=0.4.9,<0.5.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "markdown (>=3.8,<4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
